<resources>
    <string name="app_name">CASA JIP</string>
    <string name="button_send">SEND</string>
    <string name="task">Task</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="gallery">Gallery</string>
    <string name="btn_add">Add</string>
    <string name="btn_complete">Complete</string>
    <string name="hello_chat_fragment">Hello chat fragment</string>
    <string name="hello_gallery_fragment">Hello gallery fragment</string>
    <string name="hello_task_fragment">Hello task fragment</string>
    <string name="next">NEXT</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create a new account</string>
    <string name="create">Create</string>
    <string name="image">Image</string>
    <string name="all_photos">All Photos</string>
    <string name="favorite">Favorite</string>
    <string name="rename">Rename</string>
    <string name="addMember">Add Member</string>
    <string name="photo">Photo</string>
    <string name="leaveChat">Leave Chat</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="test_user">Test User</string>
    <string name="test_email">casajip@gmail.com</string>
    <string name="profile_img">Profile Image</string>
    <string name="current_group">Family1</string>
    <string name="group_code">Code: zcn93y1</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_member">Add Member</string>
    <string name="add_group">Add Group</string>
    <string name="change_group">Change Group</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>

</resources>