<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/edit_profile" android:title="@string/edit_profile" android:icon="@drawable/ic_edit_24px"/>
    <item android:id="@+id/add_member" android:title="@string/add_member" android:icon="@drawable/ic_person_add_24px"/>
    <item android:id="@+id/add_group" android:title="@string/add_group" android:icon="@drawable/ic_group_add_24px"/>
    <item android:id="@+id/change_group" android:title="@string/change_group" android:icon="@drawable/ic_change_group_24px"/>
    <item android:id="@+id/sign_out" android:title="@string/sign_out" android:icon="@drawable/ic_exit_to_app_24px"/>
    <item android:id="@+id/delete_account" android:title="@string/delete_account" android:icon="@drawable/ic_delete_24px"/>
</menu>